Fixed profile picture cropper issue

--- a/wondrous/static/css/style.css
+++ b/wondrous/static/css/style.css
@@ -411,7 +411,7 @@ td, th {
   -o-box-shadow: inset 0 0px 5px #969696;
   box-shadow: inset 0 0px 5px #969696; }
 
-#picture-wrapper {
+.picture-wrapper {
   width: 400px !important;
   height: 400px !important; }
 
